// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageLink cover renders correctly 1`] = `
<div>
  <a
    bg="#eb1d23"
    css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
    data-testid="page-link-cover"
    direction="up"
    duration="1"
    href="/"
  >
    Cover
  </a>
</div>
`;

exports[`PageLink fade renders correctly 1`] = `
<div>
  <a
    css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
    data-testid="page-link-fade"
    href="/"
  >
    Fade
  </a>
</div>
`;

exports[`PageLink paintDrip renders correctly 1`] = `
<div>
  <a
    css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
    data-testid="page-link-paint"
    hex="#eb1d23"
    href="/"
  >
    Paint Drip
  </a>
</div>
`;

exports[`PageLink renders correctly 1`] = `
<div>
  <a
    css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
    data-testid="page-link"
    href="/"
  >
    Default
  </a>
</div>
`;

exports[`PageLink swipe renders correctly 1`] = `
<div>
  <a
    css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
    data-testid="page-link-swipe"
    direction="up"
    hex="#eb1d23"
    href="/"
    top="exit"
  >
    Swipe
  </a>
</div>
`;
